# focusmute

./: CHANGELOG.md  README.md  TODO.md  deny.toml
.github/workflows/: check.yml  ci.yml  release.yml
crates/focusmute/: Cargo.toml
crates/focusmute-lib/: Cargo.toml
crates/focusmute-lib/src/: audio.rs  config.rs  device.rs  hooks.rs  layout.rs  offsets.rs  reconnect.rs  schema.rs
crates/focusmute-lib/src/led/: color.rs  mod.rs  ops.rs  strategy.rs
crates/focusmute/src/: icon.rs  main.rs  notification.rs  sound.rs
crates/focusmute/src/cli/: config_cmd.rs  map.rs  mod.rs  monitor.rs  predict.rs  probe.rs  status.rs
crates/focusmute/src/settings_dialog/: mod.rs  ui.rs
crates/focusmute/src/tray/: linux.rs  mod.rs  shared.rs  windows.rs
crates/focusmute/src/tray/state/: hotkey.rs  icon.rs  menu.rs  mod.rs
crates/focusmute/tests/: cli_integration.rs
docs/: README.md
