[package]
name = "focusmute-lib"
version = "0.6.0"
edition = "2024"
description = "Hotkey mute control for Focusrite Scarlett 4th Gen interfaces"
authors = ["Martin Simon"]
license = "Apache-2.0"
repository = "https://github.com/barnumbirr/focusmute"
homepage = "https://github.com/barnumbirr/focusmute"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
base64 = "0.22"
flate2 = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nusb = "0.1"
libpulse-binding = "2"

[target.'cfg(windows)'.dependencies]
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Foundation",
] }
